# haskell-amqp-examples

./: .gitignore  Main.hs  README.md  RabbitMQLog.hs  ServiceManager.hs  amqp.cabal
Service/: SMF.hs
